# KISR

./: .gitignore  CONFORMANCE.md  CONTRIBUTING.md  KISR.md  LICENSE  README.md  kisr.rs
SDKs/android/: README.md  build.gradle.kts  settings.gradle.kts
SDKs/android/kisr/: build.gradle.kts  consumer-rules.pro
SDKs/android/kisr/src/main/: AndroidManifest.xml
SDKs/android/kisr/src/main/java/org/kisr/sdk/: KISR.kt  KISRDeeplink.kt  KISRError.kt  KISRJSCoreBridge.kt  KISRPayload.kt  KISRQRCodeView.kt  KISRRemote.kt  KISRTypes.kt  KISRWalletAdapterJS.kt  Rusty_KISRService.kt
SDKs/android/kisr/src/main/java/org/kisr/sdk/internal/: Crypto.kt  Utils.kt
SDKs/ios/: Package.swift  README.md
SDKs/ios/Sources/: Rust_KISRService.swift
SDKs/ios/Sources/KISR/: KISRCryptoAdapters.swift  KISRDeeplink.swift  KISRJSCoreBridge.swift  KISRPayload.swift  KISRQRCodeView.swift  KISRRemote.swift  KISRService.swift  KISRTypes.swift  KISRUtils.swift  KISRWalletAdapterJS.swift
UI/: README.md  flow_details.md
js/: InviteService.js  index.js  router.js  server.js
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/fee/: mod.rs
rust/src/rpc_ffi/: mod.rs  tx_submit.rs  utxo.rs
rust/src/tx/: generator.rs
spec/: deeplink.md  protocol.md
