[package]
name = "kaspa_kisr_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "kaspa_kisr_ffi"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bech32 = "0.9"
bs58 = "0.4"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha2 = "0.10"
hmac = "0.12"
ripemd = "0.1"
k256 = { version = "0.13", features = ["ecdsa"] }
bip32 = { version = "0.5", default-features = false, features = ["secp256k1","alloc"] }
kaspa_addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", package = "kaspa-addresses" }
zeroize = "1.6"
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", package = "kaspa-consensus-core" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", package = "kaspa-txscript" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", package = "kaspa-hashes" }
secp256k1 = { version = "0.28", features = ["global-context","rand-std","recovery","std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
blake2b_simd = "1"
once_cell = { version = "1", optional = true }
parking_lot = { version = "0.12", optional = true }
tokio = { version = "1", features = ["rt-multi-thread","macros","time","net","sync"], optional = true }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", package = "kaspa-rpc-core", optional = true }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", package = "kaspa-wrpc-client", optional = true }
workflow-rpc = { version = "0.18", optional = true }
url = { version = "2", optional = true }
async-channel = { version = "2", optional = true }

[features]
# RPC feature gates the wRPC client FFI (utxo, submit, etc.)
rpc = [
    "dep:once_cell",
    "dep:parking_lot",
    "dep:tokio",
    "dep:kaspa-rpc-core",
    "dep:kaspa-wrpc-client",
    "dep:workflow-rpc",
    "dep:url",
    "dep:async-channel",
]

[patch.crates-io]
mac_address = { path = "../../FFI/kaspa_ffi/vendor/mac_address" }
